--- a/localization/en.ext.xml
+++ b/localization/en.ext.xml
@@ -206,7 +206,7 @@
     <Warning>Warning! </Warning>
   </CheckGlobal>  
   <CheckLicense>
-    <StiOrientationPageCheckLong>The trial of Stimulsoft Ultimate is a full-featured version. The only restriction is the Trial watermark shown on report pages. Buy the product to remove it from the report designer.</StiOrientationPageCheckLong>
+    <StiLicenseTrialCheckLong>You are using the trial version of Stimulsoft Reports and Dashboards. To use the software in production you should purchase a license.</StiLicenseTrialCheckLong>
   </CheckLicense>
   <CheckPage>
     <StiLostPointsOnPageCheckLong>Lost points are found on the '{0}' page: {1}. Points are invisible and used in the following primitives: vertical line, rectangle and rounded rectangle. If the point does not match to any components then it can be deleted.</StiLostPointsOnPageCheckLong>
